src/objects/Marketing_Attribution__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bizible_Ad_Campaign_Name__c</fullName>
        <formula>Bizible_Touchpoint__r.bizible2__Ad_Campaign_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bizible Ad Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bizible_Medium__c</fullName>
        <formula>Bizible_Touchpoint__r.bizible2__Medium__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bizible Medium</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bizible_Salesforce_Campaign_Owner__c</fullName>
        <formula>Bizible_Touchpoint__r.bizible2__SF_Campaign__r.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bizible Salesforce Campaign Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bizible_Salesforce_Campaign__c</fullName>
        <formula>Bizible_Touchpoint__r.bizible2__SF_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bizible Salesforce Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bizible_Touchpoint_Date__c</fullName>
        <formula>Bizible_Touchpoint__r.bizible2__Touchpoint_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bizible Touchpoint Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bizible_Touchpoint_Source_Bucket__c</fullName>
        <formula>Bizible_Touchpoint__r.Source_Bucket__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bizible Touchpoint Source Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bizible_Touchpoint_Source__c</fullName>
        <formula>Bizible_Touchpoint__r.bizible2__Touchpoint_Source__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bizible Touchpoint Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bizible_Touchpoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Touchpoint</label>
        <referenceTo>bizible2__Bizible_Touchpoint__c</referenceTo>
        <relationshipLabel>Marketing Attributions</relationshipLabel>
        <relationshipName>Marketing_Attributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Safe_ID__c</fullName>
        <formula>Bizible_Touchpoint__r.bizible2__Bizible_Person__r.Contact_Safe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete__c</fullName>
        <formula>Bizible_Touchpoint__r.bizible2__Touchpoint_Date__c &gt;  Opportunity_Created_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Safe_ID__c</fullName>
        <formula>Bizible_Touchpoint__r.bizible2__Bizible_Person__r.Lead_Safe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Attribution_Safe_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Attribution Safe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.Close_Date_adj_for_Loss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>adjusted for loss.</inlineHelpText>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_Date__c</fullName>
        <formula>Opportunity__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Highest_Stage_Reached__c</fullName>
        <formula>Opportunity__r.Highest_Stage_Reached__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Highest Stage Reached</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_Date__c</fullName>
        <formula>Opportunity__r.Opportunity_ID_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Move_to_Upside_Date__c</fullName>
        <formula>Opportunity__r.Move_to_Upside_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Move to Upside Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Origination_Source__c</fullName>
        <formula>Opportunity__r.Origination_Source__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Origination Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Team_Group_Buckets__c</fullName>
        <formula>Opportunity__r.Owner_Team_Group_Buckets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Team (Group Buckets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Team__c</fullName>
        <formula>TEXT(Opportunity__r.Owner_Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Safe_ID__c</fullName>
        <formula>CASESAFEID(Opportunity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Ordered__c</fullName>
        <formula>Opportunity__r.Stage_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage (Ordered)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Marketing Attributions</relationshipLabel>
        <relationshipName>Marketing_Attributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Name__c</fullName>
        <formula>Bizible_Touchpoint__r.bizible2__Bizible_Person__r.Bizible_Person_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Name</label>
        <type>Text</type>
    </fields>
    <label>Marketing Attribution</label>
    <nameField>
        <label>Marketing Attribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Attributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>